# dash-earthquakes

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  Procfile  README.md  app.json  app.py  cloudbuild.yaml  deploy.sh  example.env  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
assets/: dash-stylesheet.css  typography.css
tests/: test_basics.py
