[tool.poetry]
name = "dash-earthquakes"
version = "0.1.0"
description = "A Plotly Dash application showing earthquake data from the USGS website"
authors = ["Giacomo Debidda <jackdebidda@gmail.com>"]
license = "MIT"
repository = "https://github.com/jackdbd/dash-earthquakes"
homepage = "https://github.com/jackdbd/dash-earthquakes"
keywords = ['python', 'dashboard', 'usgs', 'mapbox']

[tool.poetry.dependencies]
arrow = "^0.16.0"
chart-studio = "^1.1.0"
dash = "^1.16.1"
gunicorn = "^20.0.4"
pandas = "^1.1.2"
python = "^3.8"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.8.0"
pytest = "^6.0.2"

[tool.poe.tasks]
dev = "poetry run python app.py"
format = "poetry run black ."
prod = "poetry run gunicorn app:server --bind 0.0.0.0:5000"
test = "pytest --verbose"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
